# QuarryDB

./: CMakeLists.txt  Messages.sh  QuarryDB.kdev4  README.md
.kdev4/: QuarryDB.kdev4
icons/: CMakeLists.txt
libsrc/: .CMakeLists.txt.kate-swp  CMakeLists.txt  dbfield.cpp  dbfield.h  dbmanager.cpp  dbmanager.h
libsrc/fields/: .integerfield.h.kate-swp  integerfield.cpp  integerfield.h
src/: CMakeLists.txt  io.github.tridentu.quarrydb.appdata.xml  io.github.tridentu.quarrydb.desktop  main.cpp  org.example.quarrydb.appdata.xml  org.example.quarrydb.desktop  quarrydb.rc  quarrydb.ui  quarrydbwindow.cpp  quarrydbwindow.h
